Mosaic screen occurred on second display from igpu while set display mode from "single display" to "Mirror"
Mosaic screen occurred on second display while set display mode from "single" to "Mirror" ,when display from igpu and Dgpu. Because it don't create pixmap correctly in this case. This issue occur when we use the following commit: 69365526 If we don't use this patch. display is normal when set display mode from "single" to "Mirror".
And we submit a patch to fixed, please review: !71 (diffs)
Edited by jie zhang