glamor: unset AMDGPU_CREATE_PIXMAP_SCANOUT on shared pixmap

While running multi-display test(for both APUs and DGPUs), if
the screen setting mode is changed from "single mode" to "share mode",
the screen shows tiled distortion, due to wrongly created pixmap.
This is a regression.

Fixes: 0732f81a2c67 ("glamor: Make pixmap scanout compatible if its dimensions are")
Closes: https://gitlab.freedesktop.org/xorg/driver/xf86-video-amdgpu/-/issues/48

Acked-by: Shashank Sharma <shashank.sharma@amd.com>
Signed-off-by: Jesse Zhang <jesse.zhang@amd.com>
Signed-off-by: Shashank Sharma <shashank.sharma@amd.com>