src/amdgpu_glamor.c
@@ -210,6 +210,7 @@ amdgpu_glamor_create_pixmap(ScreenPtr screen, int w, int h, int depth,
 		return NULL;
 
 	if (usage != CREATE_PIXMAP_USAGE_BACKING_PIXMAP &&
+	    usage != CREATE_PIXMAP_USAGE_SHARED &&
 	    !info->shadow_primary &&
 	    w >= scrn->virtualX &&
 	    w <= scrn->displayWidth &&
